firebase auth update

--- a/backend/website/templates/home.html
+++ b/backend/website/templates/home.html
@@ -1,6 +1,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <script src="https://www.gstatic.com/firebasejs/9.6.6/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.6.6/firebase-auth.js"></script>
     <title>Home page</title>
 </head>
 <body>
