--- a/backend/website/templates/profile.html
+++ b/backend/website/templates/profile.html
@@ -1,22 +1,31 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Welcome</title>
-    <style>
-        button{
-            right: 10px;
-            top: 5px;
+    <title>User Profile</title>
+    <script src="{% static 'js/firebase_init.js' %}"></script>
+    <script src="{% static 'js/firebase_google_auth.js' %}"></script>
+    <script>
+        function signOut() {
+            firebase.auth().signOut().then(() => {
+                console.log('User signed out');
+                // You can redirect the user to the home page or another desired location
+            }).catch((error) => {
+                console.error('Sign-out error:', error);
+            });
         }
-    </style>
+    </script>
 </head>
 <body>
-    <h1>THIS IS PROFILE PAGE</h1>
-    <h2>Welcome! {{ email }}</h2>
-    <div>
-        <form action="{% url 'user_logout' %}" method="post">
-            {% csrf_token %}
-            <button type="submit">Log Out</button>
-          </form>
-    </div>
+    <h1>User Profile</h1>
+    <p>User Information:</p>
+    <ul>
+        <li>Username: {{ user_data.username }}</li>
+        <li>First Name: {{ user_data.first_name }}</li>
+        <li>Last Name: {{ user_data.last_name }}</li>
+        <li>Email: {{ user_data.email }}</li>
+        <!-- Add other user-related fields as needed -->
+    </ul>
+    <button type="button" onclick="signOut()">Logout</button>
 </body>
 </html>
