--- a/backend/website/templates/login.html
+++ b/backend/website/templates/login.html
@@ -32,8 +32,16 @@
             <label for="email">Email:</label>
             <input type="email" name="email" required>
             <br>
-            <label for="password">Password:</label>
-            <input type="password" name="password" required>
+            <div class="box">
+                <label for="password">Password:</label>
+                <div class="inputBox">
+                    <input type="password" id="pswrd" placeholder="Password" name="password" required>
+                    <span id="toggleBtn"></span>
+                </div> 
+                <div class="validation">
+                    
+                </div>
+            </div>
             <br>
             <button type="submit">Login</button>
             <br>
